# cltv

./: .dockerignore  .gitignore  Dockerfile  GitVersion.yml  License  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  sonar-project.properties
.github/workflows/: continuous_integration.yml  create_release.yml  deploy_ifra.yml  deploy_python.yml
functions/: main.py  requirements.txt
src/: config.yml  main.py  pipeline.py
src/config_manager/: manager.py
src/dataloader/: bq_dataset.py  query.txt
src/models/: cltv.py
src/terraform/: _dev.tfvars  _prod.tfvars  _test.tfvars  artifact_registry.tf  bigquery.tf  bucket.tf  cloud_functions.tf  main.tf  variables.tf  workflow.tf
src/utils/: utils.py
src/workflows/: wkf_cltv.yml
tests/: test_bq_dataset.py
