[project]
name = "cltv"
dynamic = ["version"]
authors = [
  { name="Karan Rampal", email="karan.rampal@hm.com" },
]
description = "Customer lifetime value prediction"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyyaml",
    "numpy",
    "matplotlib",
    "pandas",
    "google-cloud-bigquery",
    "google-cloud-secret-manager",
    "db-dtypes",
    "lifetimes",
    "pymc-marketing",
    "tqdm"
]

[project.urls]
"Homepage" = "https://github.com/hm-group/cltv"
"Bug Tracker" = "https://github.com/hm-group/cltv/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
show_error_codes = true
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disable_error_code = ["attr-defined"]

[tool.pylint."MASTER"]
ignore = [".ipynb_checkpoints"]

[tool.pylint."TYPECHECK"]
generated-members = ["config_manager"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 100